recreate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollingupdate-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: rollingupdate.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rollingupdate-demo
                port: 
                  number: 80
